# otel-health

./: .env.example  .gitignore  README.md  docker-compose.yml  run_analysis.py
.github/workflows/: otel-health-cloud.yml
cloud/: .env.example  README.md  pyproject.toml  requirements.txt  run_cloud.py
cloud/otel_cloud/: dashboard.py  metrics.py
grafana/dashboards/: otel-health.json
grafana/provisioning/datasources/: infinity.yml
local/: README.md  docker-compose.yml  pyproject.toml  run_analysis.py
local/grafana/provisioning/dashboards/: dashboard.yml
local/otel_health/: activity.py  collector.py  pr_cycle_time.py  repo_activity_30d.py  teams.py
otel_health/: activity.py  collector.py  teams.py
